--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tensorflow/tfjs": "^2.8.2",
+    "@tensorflow/tfjs-node": "^2.8.3",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "@types/jest": "^26.0.19",
     "@types/node": "^12.19.11",
+    "@types/numjs": "^0.14.5",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
-    "react": "^17.0.1",
+    "@types/react-sound": "^1.2.2",
+    "node-pre-gyp": "^0.17.0",
+    "numjs": "git+https://github.com/nicolaspanel/numjs.git",
+    "precise-ui": "^1.5.1",
+    "react": "^16.14.0",
+    "react-audio-player": "^0.14.0",
     "react-dom": "^17.0.1",
+    "react-h5-audio-player": "^3.5.0",
     "react-scripts": "4.0.1",
+    "styled-components": "^2.4.1",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
