--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-sound": "^1.2.2",
+    "cors": "^2.8.5",
     "node-pre-gyp": "^0.17.0",
     "numjs": "git+https://github.com/nicolaspanel/numjs.git",
     "precise-ui": "^1.5.1",
@@ -21,6 +22,7 @@
     "react-audio-player": "^0.14.0",
     "react-dom": "^17.0.1",
     "react-h5-audio-player": "^3.5.0",
+    "react-loader-spinner": "^3.1.14",
     "react-scripts": "4.0.1",
     "styled-components": "^2.4.1",
     "typescript": "^4.1.3",
@@ -49,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-loader-spinner": "^3.1.3"
   }
 }
