--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-sound": "^1.2.2",
+    "comlink-loader": "^2.0.0",
     "cors": "^2.8.5",
     "node-pre-gyp": "^0.17.0",
     "numjs": "git+https://github.com/nicolaspanel/numjs.git",
@@ -25,7 +26,6 @@
     "react-loader-spinner": "^3.1.14",
     "react-scripts": "4.0.1",
     "styled-components": "^2.4.1",
-    "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -53,6 +53,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-loader-spinner": "^3.1.3"
+    "@types/react-loader-spinner": "^3.1.3",
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3"
   }
 }
